crates/toml_edit/fixtures/invalid/table/rrbrace.stderr
TOML parse error at line 1, column 8
  |
1 | [[table] ]
  |        ^
Invalid table header
Expected `.`, `]]`
